2015-10-05 Fixed isAttempted action in Image Gap module
2015-10-05 Added isAllOK command to Table module
2015-10-05 Added support for calculating time that user spent on each page to PlayerUtils
2015-10-02 Fixed problem with displaying percentage score in LearnPen Report module
2015-09-30 Added increaseMistakeCounter command
2015-09-28 Added classes on show answers and show errors mode in Line Number module
2015-09-28 Added property Page Attempted in Assesment Navigation Bar module
2015-09-28 Fixed saving visibility in state after reset in Text module
2015-09-23 Fixed reading-out data from sensors in LearnPen Report module
2015-09-23 Fixed disabling gap after checking answers in Image Gap module
2015-09-22 Added handling reset in Page Rating module
2015-09-16 Fixed issue with checking answer in Is Equation mode in Basic Math Gaps module
2015-09-16 Fixed check mode and show answers mode connected with Math module in Table module
2015-09-15 Fixed problem with coloring empty dropdown gaps in Text module
2015-09-11 Fixed problem with disabled gaps in show answers mode in Text module
2015-09-11 Fixed problem with displaying page numbers on mLibro in Page Icon Toolbar
2015-09-11 Fixed problem with setting gap width in Table module
2015-09-09 Added changes to Sudoku, Fractions modules and added new module Fractions Binder
2015-09-09 Fixed issue with wrong range image after reset in Animated Lesson Progress
2015-09-08 Fixed issue with class on hover after reset in Image Identification module
2015-09-08 Added incrementing check counter in Show Answers module
2015-09-01 Fixed issue with earlier end of movie in Video module
2015-08-27 Fixed issue with draggable element in Text module
2015-08-25 Fixed issue with receiving state without droppedElements in Text module
2015-08-25 Added Show Answers mode in Hangman module
2015-08-25 Fixed getting maxScore by page name on page loaded event.