@@ -1,3 +1,4 @@
+2015-10-06 Fixed problem with displaying data in Graph module
 2015-10-05 Fixed isAttempted action in Image Gap module
 2015-10-05 Added isAllOK command to Table module
 2015-10-05 Added support for calculating time that user spent on each page to PlayerUtils
